# NDP_Web_App_2023

./: README.md  Testing Google Colab.ipynb  album.db  main.py  pyproject.toml
static/: style.css
templates/: index.html  message.html  view.html
